# hrpsys-base

idl/: CMGcontrollerService.idl  CMakeLists.txt  StabilizerService.idl
python/: hrpsys_config.py
rtc/: CMakeLists.txt
rtc/CMGcontroller/: CMGcontroller.cpp  CMGcontroller.h  CMGcontrollerComp.cpp  CMGcontrollerService_impl.cpp  CMGcontrollerService_impl.h  CMakeLists.txt  README.CMGcontroller
rtc/Stabilizer/: Stabilizer.cpp  Stabilizer.h  StabilizerService_impl.cpp  StabilizerService_impl.h
